--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Check-in de Convidados - J & S</title>
+<title>Check-in - J & S</title>
 <link rel="icon" href="favicon.png" type="image/png">
 <link href="https://fonts.googleapis.com/css2?family=Great+Vibes&family=Open+Sans:wght@400;600&display=swap" rel="stylesheet">
 
@@ -11,9 +11,9 @@
 body { font-family:'Open Sans', sans-serif; margin:0; background:#fff; color:#333; }
 .header { background-color:#cff1a9; color:#000; padding:1.5rem 2rem; box-shadow:0 2px 10px rgba(0,0,0,0.1); }
 .header-container { display:flex; align-items:center; justify-content:center; flex-wrap:wrap; gap:1rem; max-width:900px; margin:0 auto; }
-.logo { height:100px; width:auto; border-radius:50%; object-fit:cover; }
+.logo { height:150px; width:auto; border-radius:50%; object-fit:cover; }
 .header-text { text-align:center; }
-.couple-names { font-family:'Great Vibes', cursive; font-size:2.5rem; margin:0; line-height:1.2; }
+.couple-names { font-family:'Great Vibes', cursive; font-size:2.8rem; margin:0; line-height:1.2; }
 .event-info { font-family:'Open Sans', sans-serif; font-size:0.9rem; margin-top:0.3rem; letter-spacing:0.5px; }
 @media(max-width:600px){ .header-container{flex-direction:column;} .couple-names{font-size:2rem;} .logo{height:70px;} }
 .fade-in{animation:fadeIn 1s ease-in;} @keyframes fadeIn{from{opacity:0;transform:translateY(20px);}to{opacity:1;transform:translateY(0);}}
@@ -47,10 +47,10 @@ li:hover{background:#f0f0f0;}
   <button class="button-green w-full mb-2" onclick="performSearch()">Buscar Convidado</button>
   <button class="button-gray w-full mb-2" onclick="refreshData()">🔄 Atualizar Dados</button>
 
-  <h3 class="font-bold mt-4 mb-2">⏳ Convidados Pendentes</h3>
+  <h3 class="font-bold mt-4 mb-2">⏳ Convidados Confirmados</h3>
   <ul id="pendingList"></ul>
 
-  <h3 class="font-bold mt-4 mb-2">✅ Convidados Check-in Realizado</h3>
+  <h3 class="font-bold mt-4 mb-2">✅ Check-in Realizado</h3>
   <ul id="confirmedList"></ul>
 </div>
 
@@ -59,7 +59,7 @@ li:hover{background:#f0f0f0;}
   <div class="bg-white p-6 rounded-xl max-w-sm text-center">
     <p id="modalMessage" class="mb-4 font-semibold"></p>
     <div class="flex justify-around">
-      <button class="button-green" onclick="confirmCheckin()">Confirmar</button>
+      <button class="button-green" onclick="confirmCheckin()">Check-inr</button>
       <button class="button-gray" onclick="cancelCheckin()">Cancelar</button>
     </div>
   </div>
@@ -166,4 +166,5 @@ document.getElementById('searchInput').focus();
 </script>
 </body>
 </html>
+
 
