--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
 
 <style>
 body { font-family:'Open Sans', sans-serif; margin:0; background:#fff; color:#333; }
-.header { background-color:#cff1a9; color:#000; padding:1.5rem 2rem; box-shadow:0 2px 10px rgba(0,0,0,0.1); }
+.header { background-color:#cff1a9; color:#000; padding:0.5rem 2rem; box-shadow:0 2px 10px rgba(0,0,0,0.1); }
 .header-container { display:flex; align-items:center; justify-content:center; flex-wrap:wrap; gap:1rem; max-width:900px; margin:0 auto; }
-.logo { height:150px; width:auto; border-radius:50%; object-fit:cover; }
+.logo { height:180px; width:auto; border-radius:50%; object-fit:cover; }
 .header-text { text-align:center; }
 .couple-names { font-family:'Great Vibes', cursive; font-size:2.8rem; margin:0; line-height:1.2; }
 .event-info { font-family:'Open Sans', sans-serif; font-size:0.9rem; margin-top:0.3rem; letter-spacing:0.5px; }
@@ -59,7 +59,7 @@ li:hover{background:#f0f0f0;}
   <div class="bg-white p-6 rounded-xl max-w-sm text-center">
     <p id="modalMessage" class="mb-4 font-semibold"></p>
     <div class="flex justify-around">
-      <button class="button-green" onclick="confirmCheckin()">Check-inr</button>
+      <button class="button-green" onclick="confirmCheckin()">Check-in</button>
       <button class="button-gray" onclick="cancelCheckin()">Cancelar</button>
     </div>
   </div>
@@ -166,5 +166,6 @@ document.getElementById('searchInput').focus();
 </script>
 </body>
 </html>
+
 
 
