--- a/index.html
+++ b/index.html
@@ -9,13 +9,13 @@
 
 <style>
 body { font-family:'Open Sans', sans-serif; margin:0; background:#fff; color:#333; }
-.header { background-color:#cff1a9; color:#000; padding:0.5rem 2rem; box-shadow:0 2px 10px rgba(0,0,0,0.1); }
-.header-container { display:flex; align-items:center; justify-content:center; flex-wrap:wrap; gap:1rem; max-width:900px; margin:0 auto; }
-.logo { height:180px; width:auto; border-radius:50%; object-fit:cover; }
+.header { background-color:#8bd24d; color:white; padding:0.5rem 2rem; box-shadow:0 2px 10px rgba(0,0,0,0.1); }
+.header-container { display:flex; align-items:center; justify-content:center; flex-wrap:wrap; gap:1rem; max-width:700px; margin:0 auto; }
+.logo { height:100px; width:auto; border-radius:50%; object-fit:cover; }
 .header-text { text-align:center; }
 .couple-names { font-family:'Great Vibes', cursive; font-size:2.8rem; margin:0; line-height:1.2; }
 .event-info { font-family:'Open Sans', sans-serif; font-size:0.9rem; margin-top:0.3rem; letter-spacing:0.5px; }
-@media(max-width:600px){ .header-container{flex-direction:column;} .couple-names{font-size:2rem;} .logo{height:70px;} }
+@media(max-width:600px){ .header-container{flex-direction:column;} .couple-names{font-size:2rem;} .logo{height:50px;} }
 .fade-in{animation:fadeIn 1s ease-in;} @keyframes fadeIn{from{opacity:0;transform:translateY(20px);}to{opacity:1;transform:translateY(0);}}
 .pulse-success{animation:pulseSuccess 1.5s ease-in-out;} @keyframes pulseSuccess{0%{transform:scale(1);}50%{transform:scale(1.05);background-color:#8BD24D;}100%{transform:scale(1);}}
 .highlight{font-weight:bold;font-size:1.25rem;color:#8BD24D;}
@@ -44,13 +44,13 @@ li:hover{background:#f0f0f0;}
 
 <div class="max-w-xl mx-auto mt-6 bg-white p-6 rounded-xl shadow-md">
   <input type="text" id="searchInput" placeholder="Digite nome, apelido ou telefone" onkeyup="searchGuest(event)">
-  <button class="button-green w-full mb-2" onclick="performSearch()">Buscar Convidado</button>
-  <button class="button-gray w-full mb-2" onclick="refreshData()">🔄 Atualizar Dados</button>
+  <button class="button-green w-full mb-4" onclick="performSearch()">Buscar Convidado</button>
+  <button class="button-gray w-full mb-4" onclick="refreshData()">🔄 Atualizar Dados</button>
 
-  <h3 class="font-bold mt-4 mb-2">⏳ Convidados Confirmados</h3>
+  <h3 class="font-bold mt-4 mb-2">📝 Convidados Confirmados</h3>
   <ul id="pendingList"></ul>
 
-  <h3 class="font-bold mt-4 mb-2">✅ Check-in Realizado</h3>
+  <h3 class="font-bold mt-4 mb-2">🟢 ✔ Check-in Realizado</h3>
   <ul id="confirmedList"></ul>
 </div>
 
@@ -166,6 +166,7 @@ document.getElementById('searchInput').focus();
 </script>
 </body>
 </html>
+
 
 
 
