--- a/index.html
+++ b/index.html
@@ -9,11 +9,11 @@
 
 <style>
 body { font-family:'Open Sans', sans-serif; margin:0; background:#fff; color:#333; }
-.header { background-color:#8bd24d; color:white; padding:0.5rem 1.2rem; box-shadow:0 2px 10px rgba(0,0,0,0.1); }
+.header { background-color:#ffffff; color:8bd24d; padding:0.5rem 1.2rem; box-shadow:0 2px 10px rgba(0,0,0,0.1); }
 .header-container { display:flex; align-items:center; justify-content:center; flex-wrap:wrap; gap:1rem; max-width:700px; margin:0 auto; }
 .logo { height:140px; width:auto; border-radius:50%; object-fit:cover; }
 .header-text { text-align:center; }
-.couple-names { font-family:'Great Vibes', cursive; font-size:2rem; margin:0; line-height:1.2; }
+.couple-names { font-family:'Great Vibes', cursive; font-size:1.5rem; margin:0; line-height:1.2; }
 .event-info { font-family:'Open Sans', sans-serif; font-size:0.9rem; margin-top:0.3rem; letter-spacing:0.5px; }
 @media(max-width:600px){ .header-container{flex-direction:column;} .couple-names{font-size:2rem;} .logo{height:80px;} }
 .fade-in{animation:fadeIn 1s ease-in;} @keyframes fadeIn{from{opacity:0;transform:translateY(20px);}to{opacity:1;transform:translateY(0);}}
@@ -166,6 +166,7 @@ document.getElementById('searchInput').focus();
 </script>
 </body>
 </html>
+
 
 
 
