--- a/index.html
+++ b/index.html
@@ -234,7 +234,7 @@ async function loadGuestsFromSheets(){
     const res = await fetch(`${APPS_SCRIPT_URL}?action=getGuests`);
     const data = await res.json();
     if(data.sucesso){
-      guests = data.guests.map(g => ({...g, checkedIn: g.status === 'confirmado'}));
+      guests = data.convidados.map(g => ({...g, checkedIn: g.status === 'confirmado'}));
       updateGuestLists();
     } else { alert('Erro: ' + data.erro); }
   } catch(e){ console.error(e); alert('Erro ao carregar convidados'); }
@@ -354,5 +354,6 @@ document.getElementById('searchInput').focus();
 </script>
 </body>
 </html>
+
 
 
