--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+o codigo html esta assim o que tem parafalar sobre esse codigo <!DOCTYPE html>
 <html lang="pt-BR">
 <head>
 <meta charset="UTF-8">
@@ -354,6 +354,3 @@ document.getElementById('searchInput').focus();
 </script>
 </body>
 </html>
-
-
-
