--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-o codigo html esta assim o que tem parafalar sobre esse codigo <!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="pt-BR">
 <head>
 <meta charset="UTF-8">
@@ -354,3 +354,4 @@ document.getElementById('searchInput').focus();
 </script>
 </body>
 </html>
+
