--- a/index.html
+++ b/index.html
@@ -7,12 +7,7 @@
 <link href="https://fonts.googleapis.com/css2?family=Great+Vibes&family=Open+Sans:wght@400;600&display=swap" rel="stylesheet">
 
 <style>
-body {
-  font-family: 'Open Sans', sans-serif;
-  margin: 0;
-  background: #fff;
-  color: #333;
-}
+body { font-family: 'Open Sans', sans-serif; margin: 0; background: #fff; color: #333; }
 
 /* ======= CABEÇALHO ======= */
 .header {
@@ -48,13 +43,8 @@ body {
   font-size: 0.9rem;
   margin-top: 0.3rem;
 }
-@media(max-width:600px){
-  .logo { height: 90px; width: 90px; margin-top: 0; }
-  .couple-names { font-size: 1.6rem; }
-  .header-container { gap: 0.5rem; }
-}
 
-/* ======= GERAL ======= */
+/* ======= CONTAINER PRINCIPAL ======= */
 .container {
   max-width: 700px;
   margin: 1rem auto;
@@ -62,9 +52,6 @@ body {
   padding: 1rem;
   border-radius: 1rem;
   box-shadow: 0 4px 12px rgba(0,0,0,0.1);
-}
-@media(max-width:600px){
-  .container { margin: 0.8rem; padding: 0.8rem; }
 }
 
 input {
@@ -85,16 +72,11 @@ input {
   padding: 0.9rem;
   margin-bottom: 0.8rem;
   font-size: 1rem;
+  cursor: pointer;
 }
-.button-green {
-  background-color: #8BD24D;
-  color: white;
-}
+.button-green { background-color: #8BD24D; color: white; }
 .button-green:hover { background-color: #76b441; }
-.button-gray {
-  background-color: #ccc;
-  color: #333;
-}
+.button-gray { background-color: #ccc; color: #333; }
 .button-gray:hover { background-color: #bbb; }
 
 h3 {
@@ -136,7 +118,6 @@ li.confirmado { background: #f2fdf2; color: #333; }
   text-align: center;
   max-width: 350px;
   width: 90%;
-  box-shadow: 0 10px 25px rgba(0,0,0,0.25);
 }
 .modal-box p { font-size: 1rem; margin-bottom: 1rem; }
 
@@ -152,33 +133,34 @@ li.confirmado { background: #f2fdf2; color: #333; }
   text-align: center;
 }
 .checkin-overlay.active { display: flex; }
-.confirmation-card h2 {
-  font-size: 1.8rem;
-  color: #8BD24D;
-}
+.confirmation-card h2 { font-size: 1.8rem; color: #8BD24D; }
 .confirmation-card p { font-size: 1.2rem; margin: 1rem 0; }
-.mesa-info {
-  font-size: 2rem;
-  font-weight: bold;
-  color: #8BD24D;
-  margin-bottom: 1rem;
-}
-  .mesa-icon {
-  width: 50px;
-  height: 50px;
-  filter: hue-rotate(60deg);
-}
+.mesa-info { font-size: 2rem; font-weight: bold; color: #8BD24D; margin-bottom: 1rem; }
+.mesa-icon { width: 50px; height: 50px; filter: hue-rotate(60deg); }
+
 /* ======= FOOTER ======= */
-.footer {
-  text-align: center;
-  padding: 1rem;
-  font-size: 0.9rem;
-  color: #555;
+.footer { text-align: center; padding: 1rem; font-size: 0.9rem; color: #555; }
+
+/* ======= AJUSTES CELULAR ======= */
+@media(max-width:600px){
+  .logo { height: 90px; width: 90px; margin-top: 0; }
+  .couple-names { font-size: 1.6rem; }
+  .header-container { gap: 0.5rem; }
+  .container { margin: 0.8rem; padding: 0.8rem; }
+  input { padding: 0.8rem; font-size: 0.95rem; }
+  .button-green, .button-gray { padding: 0.85rem; font-size: 0.95rem; margin-bottom: 1rem; }
+  li { padding: 0.9rem 0.8rem; font-size: 0.95rem; }
+  li.confirmado { font-size: 0.95rem; }
+  .modal-box { padding: 1.5rem; max-width: 90%; }
+  .confirmation-card h2 { font-size: 1.6rem; }
+  .confirmation-card p { font-size: 1rem; }
+  .mesa-info { font-size: 1.6rem; }
+  .mesa-icon { width: 40px; height: 40px; }
 }
 </style>
 </head>
-
 <body>
+
 <header class="header">
   <div class="header-container">
     <img src="monograma.png" alt="Monograma" class="logo">
@@ -215,9 +197,8 @@ li.confirmado { background: #f2fdf2; color: #333; }
   <div class="confirmation-card">
     <h2>✅ Check-in realizado com sucesso!</h2>
     <p id="confirmedName"></p>
-     <img src="mesa-icon.png" alt="Mesa" class="mesa-icon" />
+    <img src="mesa-icon.png" alt="Mesa" class="mesa-icon" />
     <div class="mesa-info" id="confirmedTable"></div>
-}
     <button class="button-green" onclick="newSearch()">Novo Check-in</button>
   </div>
 </div>
@@ -228,8 +209,7 @@ li.confirmado { background: #f2fdf2; color: #333; }
 const APPS_SCRIPT_URL = 'https://script.google.com/macros/s/AKfycbwEfTr6QOye-tvdPbH36if2Fj5k_XhP5iy4oAteV8P28M5gzR3Wiqbqhp6W1EASESBc/exec';
 let guests = [], selectedGuest = null;
 
-// Carregar convidados
-async function loadGuestsFromSheets(){
+async function loadGuestsFromSheets() {
   try {
     const res = await fetch(`${APPS_SCRIPT_URL}?action=getGuests`);
     const data = await res.json();
@@ -240,7 +220,6 @@ async function loadGuestsFromSheets(){
   } catch(e){ console.error(e); alert('Erro ao carregar convidados'); }
 }
 
-// Atualizar listas
 function updateGuestLists(){
   const confirmed = document.getElementById('confirmedList');
   const pending = document.getElementById('pendingList');
@@ -258,23 +237,19 @@ function updateGuestLists(){
   });
 }
 
-// Buscar convidado
+// Busca
 function normalize(str){ return str.normalize('NFD').replace(/[\u0300-\u036f]/g,'').toLowerCase(); }
 function searchGuest(e){ if(e.key==='Enter') performSearch(); }
+
 function performSearch() {
   const term = normalize(document.getElementById('searchInput').value);
   const pendingList = document.getElementById('pendingList');
   const confirmedList = document.getElementById('confirmedList');
 
-  // limpa as listas antes da filtragem
   pendingList.innerHTML = '';
   confirmedList.innerHTML = '';
 
-  // se o campo estiver vazio, recarrega todas
-  if (!term) {
-    updateGuestLists();
-    return;
-  }
+  if (!term) { updateGuestLists(); return; }
 
   const filteredGuests = guests.filter(g =>
     normalize(g.nome).includes(term) ||
@@ -286,10 +261,9 @@ function performSearch() {
     const item = document.createElement('li');
     item.innerHTML = `<strong>${g.nome}</strong>${g.apelido ? ' (' + g.apelido + ')' : ''} - ${g.telefone}`;
     if (g.status === 'confirmado') {
-      item.style.backgroundColor = '#DFF5E0';
+      item.classList.add('confirmado');
       confirmedList.appendChild(item);
     } else {
-      item.style.backgroundColor = '#fff';
       item.onclick = () => openConfirmationModal(g);
       pendingList.appendChild(item);
     }
@@ -303,7 +277,6 @@ function performSearch() {
     pendingList.appendChild(msg);
   }
 }
-
 
 // Modal
 function openConfirmationModal(guest){
@@ -332,12 +305,13 @@ async function confirmCheckin(){
   cancelCheckin();
 }
 
-// Tela branca de resumo
+// Tela de resumo
 function showCheckinConfirmation(guest){
   document.getElementById('confirmedName').textContent = guest.nome;
   document.getElementById('confirmedTable').textContent = `Mesa ${guest.mesa}`;
   document.getElementById('checkinConfirmation').classList.add('active');
 }
+
 function newSearch(){
   selectedGuest = null;
   document.getElementById('checkinConfirmation').classList.remove('active');
@@ -354,4 +328,3 @@ document.getElementById('searchInput').focus();
 </script>
 </body>
 </html>
-
