--- a/index.html
+++ b/index.html
@@ -7,13 +7,19 @@
 <link href="https://fonts.googleapis.com/css2?family=Great+Vibes&family=Open+Sans:wght@400;600&display=swap" rel="stylesheet">
 
 <style>
-body { font-family: 'Open Sans', sans-serif; margin: 0; background: #fff; color: #333; }
+/* ======= BASE ======= */
+body {
+  font-family: 'Open Sans', sans-serif;
+  margin: 0;
+  background: #fff;
+  color: #333;
+}
 
 /* ======= CABEÇALHO ======= */
 .header {
   background-color: #ffffff;
   color: #8BD24D;
-  padding: 0.8rem 1rem;
+  padding: 1rem 1.2rem;
   box-shadow: 0 2px 10px rgba(0,0,0,0.1);
 }
 .header-container {
@@ -26,22 +32,28 @@ body { font-family: 'Open Sans', sans-serif; margin: 0; background: #fff; color:
   margin: 0 auto;
 }
 .logo {
-  height: 120px;
-  width: 120px;
+  height: 130px;
+  width: 130px;
   border-radius: 50%;
   object-fit: cover;
-  margin-top: -4px;
 }
-.header-text { text-align: center; }
+.header-text {
+  text-align: center;
+}
 .couple-names {
   font-family: 'Great Vibes', cursive;
-  font-size: 2rem;
+  font-size: 2.2rem;
   margin: 0;
   line-height: 1.2;
 }
 .event-info {
   font-size: 0.9rem;
-  margin-top: 0.3rem;
+  margin-top: 0.2rem;
+}
+@media(max-width:600px){
+  .logo { height: 100px; width: 100px; }
+  .couple-names { font-size: 1.6rem; }
+  .header-container { gap: 0.5rem; }
 }
 
 /* ======= CONTAINER PRINCIPAL ======= */
@@ -49,9 +61,12 @@ body { font-family: 'Open Sans', sans-serif; margin: 0; background: #fff; color:
   max-width: 700px;
   margin: 1rem auto;
   background: #fff;
-  padding: 1rem;
+  padding: 1.2rem;
   border-radius: 1rem;
   box-shadow: 0 4px 12px rgba(0,0,0,0.1);
+}
+@media(max-width:600px){
+  .container { margin: 0.8rem; padding: 0.8rem; }
 }
 
 input {
@@ -60,7 +75,7 @@ input {
   border-radius: 0.75rem;
   border: 2px solid #ccc;
   font-size: 1rem;
-  margin-bottom: 0.8rem;
+  margin-bottom: 1rem;
 }
 
 .button-green, .button-gray {
@@ -70,34 +85,42 @@ input {
   font-weight: bold;
   border-radius: 0.75rem;
   padding: 0.9rem;
-  margin-bottom: 0.8rem;
+  margin-bottom: 1rem;
   font-size: 1rem;
   cursor: pointer;
+  transition: 0.3s;
 }
-.button-green { background-color: #8BD24D; color: white; }
+.button-green {
+  background-color: #8BD24D;
+  color: white;
+}
 .button-green:hover { background-color: #76b441; }
-.button-gray { background-color: #ccc; color: #333; }
+.button-gray {
+  background-color: #ccc;
+  color: #333;
+}
 .button-gray:hover { background-color: #bbb; }
 
+/* ======= LISTAS ======= */
 h3 {
   margin-top: 1.5rem;
   font-size: 1.1rem;
   border-bottom: 2px solid #e5e5e5;
   padding-bottom: 0.3rem;
 }
-
-/* ======= LISTAS ======= */
 ul { list-style: none; padding: 0; margin: 0; }
 li {
   cursor: pointer;
-  padding: 0.8rem;
+  padding: 0.8rem 1rem;
   border-bottom: 1px solid #e5e5e5;
   display: flex;
   justify-content: space-between;
   align-items: center;
+  border-radius: 0.5rem;
+  transition: 0.2s;
 }
 li:last-child { border-bottom: none; }
-li:hover { background: #f9f9f9; transition: 0.2s; }
+li:hover { background: #f9f9f9; }
 li.confirmado { background: #f2fdf2; color: #333; }
 
 /* ======= MODAL ======= */
@@ -116,8 +139,9 @@ li.confirmado { background: #f2fdf2; color: #333; }
   border-radius: 1rem;
   padding: 1.8rem;
   text-align: center;
-  max-width: 350px;
+  max-width: 360px;
   width: 90%;
+  box-shadow: 0 10px 25px rgba(0,0,0,0.25);
 }
 .modal-box p { font-size: 1rem; margin-bottom: 1rem; }
 
@@ -133,34 +157,38 @@ li.confirmado { background: #f2fdf2; color: #333; }
   text-align: center;
 }
 .checkin-overlay.active { display: flex; }
-.confirmation-card h2 { font-size: 1.8rem; color: #8BD24D; }
-.confirmation-card p { font-size: 1.2rem; margin: 1rem 0; }
-.mesa-info { font-size: 2rem; font-weight: bold; color: #8BD24D; margin-bottom: 1rem; }
-.mesa-icon { width: 50px; height: 50px; filter: hue-rotate(60deg); }
+.confirmation-card h2 {
+  font-size: 2rem;
+  color: #8BD24D;
+  margin-bottom: 0.5rem;
+}
+.confirmation-card p { font-size: 1.2rem; margin: 0.5rem 0; }
+.mesa-info {
+  font-size: 2rem;
+  font-weight: bold;
+  color: #8BD24D;
+  margin: 1rem 0;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 0.5rem;
+}
+.mesa-icon {
+  width: 50px;
+  height: 50px;
+}
 
 /* ======= FOOTER ======= */
-.footer { text-align: center; padding: 1rem; font-size: 0.9rem; color: #555; }
-
-/* ======= AJUSTES CELULAR ======= */
-@media(max-width:600px){
-  .logo { height: 90px; width: 90px; margin-top: 0; }
-  .couple-names { font-size: 1.6rem; }
-  .header-container { gap: 0.5rem; }
-  .container { margin: 0.8rem; padding: 0.8rem; }
-  input { padding: 0.8rem; font-size: 0.95rem; }
-  .button-green, .button-gray { padding: 0.85rem; font-size: 0.95rem; margin-bottom: 1rem; }
-  li { padding: 0.9rem 0.8rem; font-size: 0.95rem; }
-  li.confirmado { font-size: 0.95rem; }
-  .modal-box { padding: 1.5rem; max-width: 90%; }
-  .confirmation-card h2 { font-size: 1.6rem; }
-  .confirmation-card p { font-size: 1rem; }
-  .mesa-info { font-size: 1.6rem; }
-  .mesa-icon { width: 40px; height: 40px; }
+.footer {
+  text-align: center;
+  padding: 1rem;
+  font-size: 0.9rem;
+  color: #555;
 }
 </style>
 </head>
-<body>
 
+<body>
 <header class="header">
   <div class="header-container">
     <img src="monograma.png" alt="Monograma" class="logo">
@@ -176,7 +204,7 @@ li.confirmado { background: #f2fdf2; color: #333; }
   <button class="button-green" onclick="performSearch()">Buscar Convidado</button>
   <button class="button-gray" onclick="refreshData()">🔄 Atualizar Dados</button>
 
-  <h3>💚 Convidados (aguardando check-in)</h3>
+  <h3>💚 Convidados (pendentes)</h3>
   <ul id="pendingList"></ul>
 
   <h3>✅ Check-in Realizado</h3>
@@ -192,13 +220,15 @@ li.confirmado { background: #f2fdf2; color: #333; }
   </div>
 </div>
 
-<!-- TELA BRANCA DE RESUMO -->
+<!-- TELA DE CHECK-IN CONFIRMADO -->
 <div id="checkinConfirmation" class="checkin-overlay">
   <div class="confirmation-card">
-    <h2>✅ Check-in realizado com sucesso!</h2>
+    <h2>✅ Check-in realizado!</h2>
     <p id="confirmedName"></p>
-    <img src="mesa-icon.png" alt="Mesa" class="mesa-icon" />
-    <div class="mesa-info" id="confirmedTable"></div>
+    <div class="mesa-info">
+      <img src="mesa-icon.png" alt="Mesa" class="mesa-icon">
+      <span id="confirmedTable"></span>
+    </div>
     <button class="button-green" onclick="newSearch()">Novo Check-in</button>
   </div>
 </div>
@@ -209,7 +239,8 @@ li.confirmado { background: #f2fdf2; color: #333; }
 const APPS_SCRIPT_URL = 'https://script.google.com/macros/s/AKfycbwEfTr6QOye-tvdPbH36if2Fj5k_XhP5iy4oAteV8P28M5gzR3Wiqbqhp6W1EASESBc/exec';
 let guests = [], selectedGuest = null;
 
-async function loadGuestsFromSheets() {
+// Carregar convidados
+async function loadGuestsFromSheets(){
   try {
     const res = await fetch(`${APPS_SCRIPT_URL}?action=getGuests`);
     const data = await res.json();
@@ -220,6 +251,7 @@ async function loadGuestsFromSheets() {
   } catch(e){ console.error(e); alert('Erro ao carregar convidados'); }
 }
 
+// Atualizar listas
 function updateGuestLists(){
   const confirmed = document.getElementById('confirmedList');
   const pending = document.getElementById('pendingList');
@@ -237,11 +269,12 @@ function updateGuestLists(){
   });
 }
 
-// Busca
+// Normalizar texto para busca
 function normalize(str){ return str.normalize('NFD').replace(/[\u0300-\u036f]/g,'').toLowerCase(); }
 function searchGuest(e){ if(e.key==='Enter') performSearch(); }
 
-function performSearch() {
+// Função de busca
+function performSearch(){
   const term = normalize(document.getElementById('searchInput').value);
   const pendingList = document.getElementById('pendingList');
   const confirmedList = document.getElementById('confirmedList');
@@ -249,7 +282,7 @@ function performSearch() {
   pendingList.innerHTML = '';
   confirmedList.innerHTML = '';
 
-  if (!term) { updateGuestLists(); return; }
+  if(!term){ updateGuestLists(); return; }
 
   const filteredGuests = guests.filter(g =>
     normalize(g.nome).includes(term) ||
@@ -260,7 +293,7 @@ function performSearch() {
   filteredGuests.forEach(g => {
     const item = document.createElement('li');
     item.innerHTML = `<strong>${g.nome}</strong>${g.apelido ? ' (' + g.apelido + ')' : ''} - ${g.telefone}`;
-    if (g.status === 'confirmado') {
+    if(g.status==='confirmado'){
       item.classList.add('confirmado');
       confirmedList.appendChild(item);
     } else {
@@ -269,7 +302,7 @@ function performSearch() {
     }
   });
 
-  if (filteredGuests.length === 0) {
+  if(filteredGuests.length === 0){
     const msg = document.createElement('li');
     msg.textContent = 'Nenhum convidado encontrado.';
     msg.style.textAlign = 'center';
@@ -281,7 +314,7 @@ function performSearch() {
 // Modal
 function openConfirmationModal(guest){
   selectedGuest = guest;
-  document.getElementById('modalMessage').textContent = `Confirmar check-in de ${guest.nome}?`;
+  document.getElementById('modalMessage').textContent = `Confirmar check-in de ${guest.nome}? Mesa ${guest.mesa}`;
   document.getElementById('confirmationModal').classList.add('active');
 }
 function cancelCheckin(){
@@ -312,6 +345,7 @@ function showCheckinConfirmation(guest){
   document.getElementById('checkinConfirmation').classList.add('active');
 }
 
+// Novo check-in
 function newSearch(){
   selectedGuest = null;
   document.getElementById('checkinConfirmation').classList.remove('active');
@@ -320,9 +354,10 @@ function newSearch(){
   document.getElementById('searchInput').focus();
 }
 
-// Atualizar manualmente
+// Atualizar dados manualmente
 async function refreshData(){ await loadGuestsFromSheets(); alert('Dados atualizados!'); }
 
+// Inicialização
 loadGuestsFromSheets();
 document.getElementById('searchInput').focus();
 </script>
